# AnasSync

./: .gitignore  Build_Run.sh  CMakeLists.txt  README.md  Scanner.hpp  filesystem_utils.cpp  main.cpp  run
CmakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  main
include/: netwrokManager.h
include/files/: Hasher.hpp  Scanner.hpp  filesystem_utils.hpp
include/network/: Client.h  TCP_server.h  UDP_server.h  netwrokManager.h
src/: networkManager.cpp
src/files/: Scanner.cpp  filesystem_utils.cpp  hasher.cpp
src/network/: UDP_server.cpp
